# FastAPI-Auto-Generate-Gateway

./: .coveragerc  .gitignore  404.html  Makefile  README.md  alembic.ini  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
CodeReference/: index.html
CodeReference/database/: index.html
CodeReference/exceptions/ConfigException/: index.html
CodeReference/exceptions/FastapiGatewayAutoGenerageException/: index.html
CodeReference/management/Management/: index.html
CodeReference/migration/: index.html
FAQ/: index.html
Usage/FileManipulation/http-https/: index.html
Usage/getting-started/: index.html
Usage/security/: index.html
Usage/service-management/: index.html
Usage/tags_for_service/: index.html
Usage/using-as-module/: index.html
core/: AutoRequestGeneration.py  Config.py  FastapiGatewayAutoGenerageException.py  FastapiGatewayAutoGenerate.py  OpenApiParser.py  RouteModel.py  __init__.py
core/database/: AddService.py  Errors.py  GetAllServices.py  UrlService.py  __init__.py
core/database/models/: Services.py  StatusServices.py  UrlServices.py  __init__.py
core/domain/: __init__.py
core/domain/models/: RouteModel.py  __init__.py
core/domain/usecases/: BuildRouteModelsUsecase.py  BuildRoutesUsecase.py  InitDatabaseUsecase.py  RefreshServicesUsecase.py  __init__.py
core/management/: Management.py  __init__.py
core/management/models/: AddService.py  GetAllInfoServices.py
core/management/routes/: AddServiceRoute.py  DeleteServiceRoute.py  GetAllInfoServicesRoute.py  RefreshServicesRoute.py  __init__.py  add_service.py  (+4 more)
core/utils/: OpenApiParser.py
docs/: FAQ.md  how-to-use.md  index.md
docs/CodeReference/: index.md
docs/Usage/: getting-started.md  security.md  service-management.md  tags_for_service.md  using-as-module.md
fastapi_gateway_auto_generate/: Config.py  Generator.py  __init__.py  alembic.ini
fastapi_gateway_auto_generate/database/: AddService.py  DeleteService.py  Errors.py  GetAllServices.py  SetMarkDeleteSerivce.py  StatusService.py  UrlService.py  __init__.py
fastapi_gateway_auto_generate/domain/: __init__.py
fastapi_gateway_auto_generate/exceptions/: ConfigException.py  FastapiGatewayAutoGenerageException.py  __init__.py
fastapi_gateway_auto_generate/migration/: env.py
fastapi_gateway_auto_generate/utils/: APITags.py  OpenApiParser.py  RichTraceback.py  __init__.py  success_code.py
how-to-use/: index.html
migration/: env.py
migration/versions/: 4965b9e716b8_initial.py  72829ab3d9da_initial.py  e64bda4d9b6b_initial.py
overview/: index.html
requirements/: common.txt  dev.txt
search/: search_index.json
service-management/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_generator.py
tests/builders/: FakeServices.py
tests/data/: swagger.json
tests/database/: test_add_service.py  test_add_service_integrity_error.py
tests/fixtures/: get_db_session.py  openapi_json_rinex_to_csv_fixture.py
tests/openApiParser/: open_api_parser_test.py
tests/utils/: test_success_code.py
(+74 files in other folders)
