[tool.poetry]
name = "fastapi_gateway_auto_generate"
version = "0.1-a"
description = "This library allows you to automatically generate requests for the API Gateway."
authors = ["Kalinka George <xitowzys@gmail.com>"]
license = "MIT License"
keywords = ["python", "fastapi", "gateway", "api", "microservice", "microservices"]
homepage = "https://github.com/xitowzys-ISZF/FastAPI-auto-generate-gateway"
repository = "https://github.com/xitowzys-ISZF/FastAPI-auto-generate-gateway"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
datamodel-code-generator = "^0.14.0"
loguru = "^0.6.0"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.44"
validators = "^0.20.0"
alembic = "^1.8.1"
makefun = "^1.15.0"
fastapi-gateway = {git = "https://github.com/xitowzys-ISZF/fastapi-gateway"}
python-multipart = "^0.0.5"
shortuuid = "^1.0.11"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
